# GameFixDoctorPro

./: .gitignore  GameFixDoctorPro.spec  README.md  build.cmd  command.txt  gamefix_doctor.py  install.cmd  pyproject.toml  requirements.txt  uninstall.cmd
core/: __init__.py  admin.py  config.py  data_init.py  ui.py  utils.py
data/: folder_names.json  game_signatures.json  hardware_database.json  known_apps.json  known_conflicts.json  known_launchers.json  known_services.json  repair_commands.json  settings_profiles.json  suspicious_patterns.json
docs/: AUTO_FIX_FLOW.md  DATA_SPECS.md  FEATURES.md  PROJECT_PLAN.md  SAFETY_RULES.md  TECHNICAL.md  UI_UX.md  WINGET_PUBLISH.md
kits/: README.md  tool_paths.json
modules/: __init__.py  app_checker.py  auto_fix.py  diagnosis.py  drivers.py  essentials_installer.py  full_scan.py  game_detector.py  health_check.py  network.py  power.py  process_manager.py  repairs.py  reports.py  services.py  settings.py  settings_recommender.py  snapshots.py  stress_testing.py  system_info.py
reports/stress_tests/: 2026-03-09_053815_cpu.json  2026-03-09_053815_gpu.json  2026-03-09_053815_memory.json
scripts/: build_release.ps1  create_github_release.ps1  generate_winget_manifest.ps1  publish_winget.ps1
snapshots/2026-03-09_041912_AutoFix_Wizard/: info.json  services.json
snapshots/2026-03-09_042553_Stop_service_DiagTrack/: info.json  services.json
snapshots/2026-03-09_042751_Stop_service_Spooler/: info.json  services.json
winget/manifests/s/SayedElmahdy/GameFixDoctorPro/1.0.0/: SayedElmahdy.GameFixDoctorPro.installer.yaml  (+2 more)
